trying to schedule

--- a/kernel/makefile
+++ b/kernel/makefile
@@ -13,7 +13,14 @@ LIB_DIR = ../lib
 DEVICE_DIR = ../device
 THREAD_DIR = ../thread
 PROGRAM = main.o init.o interrupt.o kernel.o memory.o
-OBJFILE = main.o init.o $(THREAD_DIR)/thread.o $(DEVICE_DIR)/timer.o $(DEVICE_DIR)/keyboard.o interrupt.o memory.o $(KERNEL_LIB_DIR)/bitmap.o $(LIB_DIR)/string.o $(KERNEL_LIB_DIR)/print_c.o $(KERNEL_LIB_DIR)/print_asm.o kernel.o
+# OBJFILE = # main.o init.o $(THREAD_DIR)/thread.o $(THREAD_DIR)/switch.o $(DEVICE_DIR)/timer.o $(DEVICE_DIR)/keyboard.o interrupt.o memory.o $(KERNEL_LIB_DIR)/bitmap.o $(LIB_DIR)/string.o $(KERNEL_LIB_DIR)/print_c.o $(KERNEL_LIB_DIR)/print_asm.o kernel.o
+OBJFILE = main.o init.o interrupt.o \
+      $(DEVICE_DIR)/timer.o kernel.o $(KERNEL_LIB_DIR)/print.o \
+      memory.o $(KERNEL_LIB_DIR)/bitmap.o \
+      $(LIB_DIR)/string.o $(THREAD_DIR)/thread.o $(KERNEL_LIB_DIR)/list.o \
+      $(THREAD_DIR)/switch.o
+
+
 # 要遵守 调用在前，实现在后，否则虚拟地址会出错
 
 all: $(PROGRAM)
