--- a/kernel/makefile
+++ b/kernel/makefile
@@ -12,10 +12,11 @@ KERNEL_LIB_DIR = ../lib/kernel
 LIB_DIR = ../lib
 DEVICE_DIR = ../device
 THREAD_DIR = ../thread
-PROGRAM = main.o init.o interrupt.o kernel.o memory.o
+PROGRAM = main.o init.o interrupt.o kernel.o memory.o debug.o
 # OBJFILE = # main.o init.o $(THREAD_DIR)/thread.o $(THREAD_DIR)/switch.o $(DEVICE_DIR)/timer.o $(DEVICE_DIR)/keyboard.o interrupt.o memory.o $(KERNEL_LIB_DIR)/bitmap.o $(LIB_DIR)/string.o $(KERNEL_LIB_DIR)/print_c.o $(KERNEL_LIB_DIR)/print_asm.o kernel.o
-OBJFILE = main.o init.o interrupt.o \
-      $(DEVICE_DIR)/timer.o kernel.o $(KERNEL_LIB_DIR)/print.o \
+OBJFILE = main.o init.o debug.o interrupt.o \
+      $(DEVICE_DIR)/timer.o kernel.o $(KERNEL_LIB_DIR)/print_c.o \
+	  $(KERNEL_LIB_DIR)/print_asm.o \
       memory.o $(KERNEL_LIB_DIR)/bitmap.o \
       $(LIB_DIR)/string.o $(THREAD_DIR)/thread.o $(KERNEL_LIB_DIR)/list.o \
       $(THREAD_DIR)/switch.o
